# SDS1-SHARAD

./: .gitignore  .gitmodules  README.md  checkout  pyproject.toml  requirements.txt
DELAY_DOPPLER/: sharad.py
MARFA/: cmp_interferometry_coregistration.py  pick_interferometry.py  run_interferometry.py  run_interferometry_coregistration.py  run_interferometry_ngg.py  zfile.py
MARFA/cmp_coreg/: cmp_coreg.py  run_cmp_coreg.sh
SHARAD/: Ls_0to90.txt  Ls_90to180.txt  SHARADEnv.py  SPLD.txt  Western_Alba_Mons_Path.txt  altimetry_test.py  data2gis.py  data_visualization.py  elysium.txt  get.py  make_dtm.py  pipeline.py  ranging.py  run_altimetry.py  run_altimetry_debug1.py  run_clutter.py  run_focussed_altimetry.py  run_interferometry.py  run_ranging.py  run_rng_cmp.py  run_rsr.py  run_sar.py  run_sar2.py  run_specularity.py  run_srf.py  run_surface.py  show_product_status.py  xover.py
SHARAD/xover/: get_et.py  (+1 more)
env/: cshrc  show_profile.sh
regress/: .coveragerc  coverage.sh  glog  pick_FOI_GOG3_JKB2j_BWN01b.npz  pick_ref_FOI_NAQLK_JKB2j_ZY1b.npz  pick_ref_GOG3_JKB2j_BWN01b_Stack15_KMS2.npz  pylint.rc  run_pydoc  run_pylint  run_pylint_all  run_pylint_combined  run_sar2_mf_cov.json  test_sharadenv.py  test_sharadfiles.py  tracks_coverage.txt  tracks_issue28.txt  tracks_run_altimetry_cov.txt  tracks_run_altimetry_fix202110.txt
tests/: coverage.sh  h5sum  pick_FOI_NAQLK_JKB2j_ZY1b.npz  pylint.rc  run_pylint_all  run_sar2_cov.json  run_sar2_cov2.json  test_interferometry.py  test_sharadenv.py  test_sharadfiles.py  tracks_run_altimetry_cov.txt
xlib/: checkout
(+78 files in other folders)
